--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Bitcoin Cache Machine
+title: Bitcoin Cache Machine - A Privacy-preserving Software-defined Data Center
 email: info@bitcoincachemachine.org
 description: Privacy-preserving Bitcoin Payment infrastructure for home and office.
 url: https://www.bitcoincachemachine.org
@@ -9,7 +9,6 @@ permalink: /:year/:month/:day/:title:output_ext
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   - jekyll-paginate
@@ -23,8 +22,6 @@ icon: /img/bcm_icon.png
 # Tertiary Parameters
 github_username:  BitcoinCacheMachine
 project_repository: BitcoinCacheMachine
-# g-analytics: UA-75881392-1
-# altmetric: true
 
 # Build settings
 markdown: kramdown
@@ -33,19 +30,9 @@ permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-# Jekyll Settings
-defaults:
-  -
-    scope:
-      path: "projects"
-      type: "pages"
-    values:
-      layout: "project"
-      header-img: "img/header.jpg"
-
 # Prose Settings
 prose:
-  ignore: ['feed.xml', '/stl', '/ply', '/js', '/plugin', '/lib', '/projectors', '_layouts', '/_includes', 'Gruntfile.js', 'package.json', 'proselinks.jsonp', 'ppanchor.matin', '.gitignore', '/search', '/css', '/img', 'favicon.png','_data/*.json','LICENSES.md','README.md','colorscheme.scss','members.html','index.html']
+  ignore: ['feed.xml', '/stl', '/ply', '/js', '/plugin', '/lib', '/projectors', '_layouts', '/_includes', 'Gruntfile.js', 'package.json', 'proselinks.jsonp', 'ppanchor.matin', '.gitignore', '/search', '/css', '/img', '/img/favicon.png','_data/*.json','LICENSES.md','README.md','colorscheme.scss','members.html','index.html']
   siteurl: 'http://www.bitcoincachemachine.org/'
   ispp: true
   media: 'img'
